Prevent dialog from having horizontal scrollbar
Happens when the popover is used, which sometimes stretches it.

--- a/src/dialog.styl
+++ b/src/dialog.styl
@@ -17,7 +17,8 @@
 		padding 0px !important
 
 	> .dialog
-		overflow auto
+		overflow-y auto
+		overflow-x hidden
 		max-width calc(100% - 20px)
 		max-height calc(100% - 40px)
 
